[gd_scene load_steps=6 format=3 uid="uid://8aqrg2wjctqa"]

[ext_resource type="Script" uid="uid://8t3d1qs7bcfb" path="res://static/realm_boudaries/swamp/altar.gd" id="1_5jtje"]
[ext_resource type="Texture2D" uid="uid://fxhb0f4sdv7c" path="res://assets/realm-1/plant/ice deity crop.png" id="1_tm8k8"]
[ext_resource type="Texture2D" uid="uid://xe4n818le3p8" path="res://addons/controller_icons/assets/key/e.png" id="3_6dmti"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6dmti"]
size = Vector2(75, 63.25)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5jtje"]
size = Vector2(51, 18)

[node name="Altar" type="Node2D" groups=["altar"]]
script = ExtResource("1_5jtje")
glow_color = Color(0, 0.239216, 0.721569, 0.368627)

[node name="Polygon2D" type="Polygon2D" parent="."]
position = Vector2(-25, -45)
scale = Vector2(5.1, 4.5)
color = Color(0.230315, 0.230315, 0.230315, 1)
polygon = PackedVector2Array(2, 0, 8, 0, 10, 10, 0, 10)

[node name="SacrificeSprite" type="Sprite2D" parent="."]
modulate = Color(0, 0, 0, 0.239216)
position = Vector2(2.9375, -21.875)
scale = Vector2(0.170024, 0.191106)
texture = ExtResource("1_tm8k8")

[node name="InteractionBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionBox"]
position = Vector2(-0.5, -11.625)
shape = SubResource("RectangleShape2D_6dmti")

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(0.5, -9)
shape = SubResource("RectangleShape2D_5jtje")

[node name="EssencePanel" type="Sprite2D" parent="."]
position = Vector2(21, 19)
scale = Vector2(2, 2)
texture = ExtResource("1_tm8k8")
region_enabled = true
region_rect = Rect2(366.876, 74.5128, 16.4732, 18.4009)

[node name="KeyboardIcon" type="TextureRect" parent="."]
offset_left = -13.0
offset_top = -76.0
offset_right = 87.0
offset_bottom = 24.0
scale = Vector2(0.25, 0.25)
texture = ExtResource("3_6dmti")

